config/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9911
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log: # configure logging
            name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: greeter_route # configure the localclus routes
            virtual_hosts:
            - name: vhemery
              domains:
              - "emery"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: emery
            - name: servicelocal
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: localclus
          http_filters:
          - name: envoy.router # enable the Router filter
            config: {}
  clusters:
  - name: localclus
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: localhost
        port_value: 50501
    - socket_address:
        address: localhost
        port_value: 50503
  - name: emery
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: 192.168.87.3
        port_value: 50501
    - socket_address:
        address: 192.168.87.3
        port_value: 50503
